--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
 	<title>newlayout</title>
 </head>
 <body>
